--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
 		"comma-spacing": "error",
 		"comma-style": "error",
 		"curly": "error",
-		"dot-location": "error",
+		"dot-location": ["error", "property"],
 		"indent": ["error", "tab"],
 		"max-nested-callbacks": "error",
 		"max-statements-per-line": "error",
@@ -26,7 +26,7 @@
 		"no-shadow": "error",
 		"no-trailing-spaces": "error",
 		"no-var": "error",
-		"object-curly-spacing": "error",
+		"object-curly-spacing": ["error", "always"],
 		"prefer-const": "error",
 		"quotes": ["error", "single"],
 		"semi": "error",
