--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,30 +5,34 @@
 		"es2021": true
 	},
 	"rules": {
-		"brace-style": "error",
-		"comma-dangle": "error",
+		"brace-style": ["error", "stroustrup", { "allowSingleLine": true }],
+		"comma-dangle": ["error", "always-multiline"],
 		"comma-spacing": "error",
 		"comma-style": "error",
-		"curly": "error",
-		"dot-location": "error",
-		"indent": "error",
-		"max-nested-callbacks": "error",
-		"max-statements-per-line": "error",
+		"curly": ["error", "multi-line", "consistent"],
+		"dot-location": ["error", "property"],
+		"indent": ["error", "tab"],
+		"max-nested-callbacks": ["error", { "max": 4 }],
+		"max-statements-per-line": ["error", { "max": 2 }],
 		"no-empty-function": "error",
 		"no-floating-decimal": "error",
 		"no-inline-comments": "error",
 		"no-lonely-if": "error",
 		"no-multi-spaces": "error",
-		"no-multiple-empty-lines": "error",
-		"no-shadow": "error",
-		"no-trailing-spaces": "error",
+		"no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 1, "maxBOF": 0 }],
+		"no-shadow": ["error", { "allow": ["err", "resolve", "reject"] }],
+		"no-trailing-spaces": ["error"],
 		"no-var": "error",
-		"object-curly-spacing": "error",
+		"object-curly-spacing": ["error", "always"],
 		"prefer-const": "error",
-		"quotes": "error",
-		"semi": "error",
+		"quotes": ["error", "single"],
+		"semi": ["error", "always"],
 		"space-before-blocks": "error",
-		"space-before-function-paren": "error",
+		"space-before-function-paren": ["error", {
+			"anonymous": "never",
+			"named": "never",
+			"asyncArrow": "always"
+		}],
 		"space-in-parens": "error",
 		"space-infix-ops": "error",
 		"space-unary-ops": "error",
