--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,104 +5,42 @@
 		"es2021": true
 	},
 	"rules": {
-		"no-var": "error",
-		"prefer-const": "error",
-
-		"no-await-in-loop": "warn",
-		"no-compare-neg-zero": "error",
-		"no-extra-parens": ["warn", "all", {
-			"nestedBinaryExpressions": false
-		}],
-		"no-template-curly-in-string": "error",
-		"no-unsafe-negation": "error",
-		"valid-jsdoc": ["warn", {
-			"requireReturn": false,
-			"requireReturnDescription": false,
-			"preferType": {
-				"String": "string",
-				"Number": "number",
-				"Boolean": "boolean",
-				"Symbol": "symbol",
-				"function": "Function",
-				"object": "Object",
-				"date": "Date",
-				"error": "Error"
-			}
-		}],
-
-		"accessor-pairs": "warn",
-		"array-callback-return": "error",
-		"complexity": "warn",
-		"consistent-return": "error",
-		"curly": ["error", "multi-line", "consistent"],
-		"dot-location": ["error", "property"],
-		"dot-notation": "error",
-		"eqeqeq": "error",
-		"no-empty-function": "error",
-		"no-floating-decimal": "error",
-		"no-implied-eval": "error",
-		"no-invalid-this": "error",
-		"no-lone-blocks": "error",
-		"no-multi-spaces": "error",
-		"no-new-func": "error",
-		"no-new-wrappers": "error",
-		"no-new": "error",
-		"no-octal-escape": "error",
-		"no-return-assign": "error",
-		"no-return-await": "error",
-		"no-self-compare": "error",
-		"no-sequences": "error",
-		"no-throw-literal": "error",
-		"no-unmodified-loop-condition": "error",
-		"no-unused-expressions": "error",
-		"no-useless-call": "error",
-		"no-useless-concat": "error",
-		"no-useless-escape": "error",
-		"no-useless-return": "error",
-		"no-void": "error",
-		"no-warning-comments": "warn",
-		"prefer-promise-reject-errors": "error",
-		"require-await": "warn",
-		"wrap-iife": "error",
-		"yoda": "error",
-
-		"no-label-var": "error",
-		"no-shadow": "error",
-		"no-undef-init": "error",
-
-		"callback-return": "error",
-		"handle-callback-err": "error",
-		"no-mixed-requires": "error",
-		"no-new-require": "error",
-		"no-path-concat": "error",
-		"no-process-env": "error",
-
+		"accessor-pairs": "error",
 		"array-bracket-spacing": "error",
+		"array-callback-return": "error",
+		"arrow-body-style": "error",
+		"arrow-parens": ["error", "as-needed"],
+		"arrow-spacing": "error",
 		"block-spacing": "error",
 		"brace-style": ["error", "1tbs", { "allowSingleLine": true }],
+		"callback-return": "error",
 		"camelcase": "error",
 		"capitalized-comments": ["error", "always", { "ignoreConsecutiveComments": true }],
 		"comma-dangle": "error",
 		"comma-spacing": "error",
 		"comma-style": "error",
+		"complexity": "error",
 		"computed-property-spacing": "error",
+		"consistent-return": "error",
 		"consistent-this": "error",
+		"curly": ["error", "multi-line", "consistent"],
+		"dot-location": ["error", "property"],
+		"dot-notation": "error",
 		"eol-last": "error",
+		"eqeqeq": "error",
 		"func-names": "error",
 		"func-style": ["error", "declaration", { "allowArrowFunctions": true }],
+		"handle-callback-err": "error",
 		"id-length": ["error", { "exceptions": ["i", "j", "a", "b"] }],
-		"indent": "off",
-		"indent-legacy": ["error", "tab", { "SwitchCase": 1 }],
+		"indent": ["error", "tab"],
 		"key-spacing": "error",
-		"keyword-spacing": ["error", {
-			"overrides": {
-				"if": { "after": false },
-				"for": { "after": false },
-				"while": { "after": false },
-				"catch": { "after": false },
-				"switch": { "after": false }
-			}
-		}],
+		"keyword-spacing": ["error", { "overrides": {
+			"catch": { "after": false },
+			"for": { "after": false },
+			"if": { "after": false },
+			"switch": { "after": false },
+			"while": { "after": false }
+		} } ],
 		"max-depth": "error",
 		"max-len": ["error", 120, 2],
 		"max-nested-callbacks": ["error", { "max": 4 }],
@@ -110,15 +48,54 @@
 		"new-cap": "error",
 		"newline-per-chained-call": ["error", { "ignoreChainWithDepth": 3 }],
 		"no-array-constructor": "error",
-		"no-bitwise": "warn",
+		"no-await-in-loop": "error",
+		"no-bitwise": "error",
+		"no-compare-neg-zero": "error",
+		"no-duplicate-imports": "error",
+		"no-empty-function": "error",
+		"no-extra-parens": ["error", "all", { "nestedBinaryExpressions": false }],
+		"no-floating-decimal": "error",
+		"no-implied-eval": "error",
 		"no-inline-comments": "error",
+		"no-invalid-this": "error",
+		"no-label-var": "error",
+		"no-lone-blocks": "error",
 		"no-lonely-if": "error",
 		"no-mixed-operators": "error",
+		"no-mixed-requires": "error",
+		"no-multi-spaces": "error",
 		"no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 1, "maxBOF": 0 }],
+		"no-new": "error",
+		"no-new-func": "error",
 		"no-new-object": "error",
+		"no-new-require": "error",
+		"no-new-wrappers": "error",
+		"no-octal-escape": "error",
+		"no-path-concat": "error",
+		"no-process-env": "error",
+		"no-return-assign": "error",
+		"no-return-await": "error",
+		"no-self-compare": "error",
+		"no-sequences": "error",
+		"no-shadow": "error",
 		"no-spaced-func": "error",
+		"no-template-curly-in-string": "error",
+		"no-throw-literal": "error",
 		"no-trailing-spaces": "error",
+		"no-undef-init": "error",
+		"no-unmodified-loop-condition": "error",
 		"no-unneeded-ternary": "error",
+		"no-unsafe-negation": "error",
+		"no-unused-expressions": "error",
+		"no-useless-call": "error",
+		"no-useless-computed-key": "error",
+		"no-useless-concat": "error",
+		"no-useless-constructor": "error",
+		"no-useless-escape": "error",
+		"no-useless-return": "error",
+		"no-var": "error",
+		"no-void": "error",
+		"no-warning-comments": "error",
 		"no-whitespace-before-property": "error",
 		"nonblock-statement-body-position": "error",
 		"object-curly-newline": "error",
@@ -126,31 +103,43 @@
 		"operator-assignment": "error",
 		"operator-linebreak": ["error", "after"],
 		"padded-blocks": ["error", "never"],
+		"prefer-arrow-callback": "error",
+		"prefer-const": "error",
+		"prefer-promise-reject-errors": "error",
+		"prefer-rest-params": "error",
+		"prefer-spread": "error",
+		"prefer-template": "error",
 		"quote-props": ["error", "as-needed"],
 		"quotes": ["error", "single", { "avoidEscape": true, "allowTemplateLiterals": true }],
-		"semi-spacing": "error",
+		"require-await": "error",
+		"rest-spread-spacing": "error",
 		"semi": "error",
+		"semi-spacing": "error",
 		"space-before-blocks": "error",
 		"space-before-function-paren": ["error", "never"],
 		"space-in-parens": "error",
 		"space-infix-ops": "error",
 		"space-unary-ops": "error",
 		"spaced-comment": "error",
+		"template-curly-spacing": "error",
 		"template-tag-spacing": "error",
 		"unicode-bom": "error",
-
-		"arrow-body-style": "error",
-		"arrow-parens": ["error", "as-needed"],
-		"arrow-spacing": "error",
-		"no-duplicate-imports": "error",
-		"no-useless-computed-key": "error",
-		"no-useless-constructor": "error",
-		"prefer-arrow-callback": "error",
-		"prefer-rest-params": "error",
-		"prefer-spread": "error",
-		"prefer-template": "error",
-		"rest-spread-spacing": "error",
-		"template-curly-spacing": "error",
-		"yield-star-spacing": "error"
+		"valid-jsdoc": ["error", {
+			"preferType": {
+				"Boolean": "boolean",
+				"Number": "number",
+				"String": "string",
+				"Symbol": "symbol",
+				"date": "Date",
+				"error": "Error",
+				"function": "Function",
+				"object": "Object"
+			},
+			"requireReturn": false,
+			"requireReturnDescription": false
+		}],
+		"wrap-iife": "error",
+		"yield-star-spacing": "error",
+		"yoda": "error"
 	}
 }
