--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asriel372005",
-  "version": "2021.4.25",
+  "version": "2021.5.3",
   "description": "ralsei372005's Discord Bot",
   "main": "index.js",
   "repository": {
@@ -14,8 +14,12 @@
   },
   "homepage": "https://github.com/ralsei372005/asriel372005#readme",
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "discord.js": "^12.5.3",
-    "discord.js-commando": "github:discordjs/commando",
-    "dotenv": "^8.2.0"
+    "discord.js-commando": "^0.12.3",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.25.0",
+    "typescript": "^4.2.4"
   }
 }
