--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "homepage": "https://github.com/ralsei372005/asriel372005#readme",
   "dependencies": {
+    "@typeit/discord": "^4.0.9",
+    "@types/node": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "discord.js": "^12.5.3",
@@ -25,6 +27,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.23.2",
+    "http": "^0.0.1-security",
+    "path": "^0.12.7",
     "typescript": "^4.2.4"
   }
 }
