Revert changes, back to using js

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asriel372005",
-  "version": "2021.5.3",
+  "version": "2021.5.7",
   "description": "ralsei372005's Discord Bot",
   "main": "index.js",
   "repository": {
@@ -14,21 +14,15 @@
   },
   "homepage": "https://github.com/ralsei372005/asriel372005#readme",
   "dependencies": {
-    "@typeit/discord": "^4.0.9",
-    "@types/node": "^15.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
     "discord.js": "^12.5.3",
     "discord.js-commando": "^0.12.3",
-    "dotenv": "^8.2.0",
+    "dotenv": "^9.0.0"
+  },
+  "devDependencies": {
     "eslint": "^7.25.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.23.2",
-    "http": "^0.0.1-security",
-    "path": "^0.12.7",
-    "typescript": "^4.2.4"
+    "eslint-plugin-promise": "^4.3.1"
   }
 }
