--- a/package.json
+++ b/package.json
@@ -19,10 +19,6 @@
     "dotenv": "^9.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.25.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1"
+    "eslint": "^7.25.0"
   }
 }
