Remove Unnecessary line break

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,5 @@
         "es2021": true,
         "node": true
     },
-    "extends": [
-        "standard"
-    ],
-    "parserOptions": {
-        "ecmaVersion": 12
-    },
-    "rules": {
-    }
+    "extends": "standard"
 }
