--- a/config.json
+++ b/config.json
@@ -1,3 +1,28 @@
 {
-    "pfp":"https://i.imgur.com/kbylzlm.png"
+  "pfp":"https://i.imgur.com/kbylzlm.png",
+  "groups": [
+    ["admin", "Admin Commands"],
+    ["version", "Asriel372005 Version"],
+    ["general", "General Commands"],
+    ["tetrio", "tetrio api commands"]
+  ],
+  "emojis": {
+    "x":"<:x_:852197164020924417>",
+    "u":"<:u_:852197135960375307>",
+    "ss":"<:ss:852197118537891870>",
+    "s+":"<:sp:852197102217723945>",
+    "s":"<:s_:852197084328886343>",
+    "s-":"<:sm:852197069221265418>",
+    "a+":"<:ap:852197051453669427>",
+    "a":"<:a_:852197032520712273>",
+    "a-":"<:am:852197019505918002>",
+    "b+":"<:bp:852196996847763486>",
+    "b":"<:b_:852196968457437226>",
+    "b-":"<:bm:852196952950177873>",
+    "c+":"<:cp:852196916774699038>",
+    "c":"<:c_:852196901466013747>",
+    "c-":"<:cm:852196885720465438>",
+    "d+":"<:dp:852196864488374282>",
+    "d":"<:d_:852196831722078210>"
+  }
 }
