--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,12 @@
         "es2021": true,
         "node": true
     },
-    "extends": "standard"
+    "extends": [
+        "xo"
+    ],
+    "parserOptions": {
+        "ecmaVersion": 12
+    },
+    "rules": {
+    }
 }
