--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asriel372005",
-  "version": "2021.6.9",
+  "version": "2021.6.10",
   "description": "ralsei372005's Discord Bot",
   "main": "index.js",
   "repository": {
@@ -14,17 +14,11 @@
   },
   "homepage": "https://github.com/ralsei372005/asriel372005#readme",
   "dependencies": {
-    "chalk": "^4.1.1",
     "discord.js": "^12.5.3",
-    "discord.js-commando": "^0.12.3",
-    "dotenv": "^9.0.0",
-    "winston": "^3.3.3"
+    "discord.js-commando": "^0.12.3"
   },
   "devDependencies": {
-    "eslint": "^7.25.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1"
+    "eslint": "^7.28.0",
+    "eslint-config-xo": "^0.36.0"
   }
 }
