--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "homepage": "https://github.com/ralsei372005/asriel372005#readme",
   "dependencies": {
     "discord.js": "^12.5.3",
-    "discord.js-commando": "^0.12.3"
+    "discord.js-commando": "^0.12.3",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^7.28.0",
