--- a/config.json
+++ b/config.json
@@ -1,26 +1,18 @@
 {
-  "prefix": "asriel",
+  "commandPrefix": "asriel",
   "owner": "379643682984296448",
-  "pfp": "https: //i.imgur.com/kbylzlm.png",
+  "pfp": "https://i.imgur.com/cYOTwFF.png",
   "groups": [
     [
       "admin",
-      "AdminCommands"
-    ],
-    [
-      "version",
-      "Asriel372005Version"
-    ],
-    [
-      "general",
-      "GeneralCommands"
+      "Admin Commands"
     ],
     [
       "tetrio",
-      "tetrioapicommands"
+      "TETR.IO Commands"
     ]
   ],
-  "emojis": {
+  "ranks": {
     "x": "<:x_:852197164020924417>",
     "u": "<:u_:852197135960375307>",
     "ss": "<:ss:852197118537891870>",
@@ -37,6 +29,7 @@
     "c": "<:c_:852196901466013747>",
     "c-": "<:cm:852196885720465438>",
     "d+": "<:dp:852196864488374282>",
-    "d": "<:d_:852196831722078210>"
+    "d": "<:d_:852196831722078210>",
+    "z": "<:z_:852453203945324544>"
   }
 }
