Update commands/tetrio/user.js and add records (40lines & blitz) fields

--- a/config.json
+++ b/config.json
@@ -31,5 +31,19 @@
     "d+": "<:dp:852196864488374282>",
     "d": "<:d_:852196831722078210>",
     "z": "<:z_:852453203945324544>"
+  },
+  "emojis": {
+    "0": "0️⃣",
+    "1": "1️⃣",
+    "2": "2️⃣",
+    "3": "3️⃣",
+    "4": "4️⃣",
+    "5": "5️⃣",
+    "6": "6️⃣",
+    "7": "7️⃣",
+    "8": "8️⃣",
+    "9": "9️⃣",
+    ":": "🇲",
+    ".": "⬜"
   }
 }
