Git Large File System Limit

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "commandPrefix": "asriel",
-  "owner": "379643682984296448",
+  "owner": ["379643682984296448", "401450759981629450", "472327239661518848"],
   "pfp": "https://i.imgur.com/cYOTwFF.png",
   "groups": [
     [
