QuickMongo and MongoDB yay

--- a/config.json
+++ b/config.json
@@ -10,6 +10,10 @@
     [
       "tetrio",
       "TETR.IO Commands"
+    ],
+    [
+      "games",
+      "Games Demo for Chriscj"
     ]
   ],
   "ranks": {
