--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "discord.js": "^12.5.3",
     "discord.js-commando": "^0.12.3",
     "dotenv": "^10.0.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "quickmongo": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^7.28.0",
