New commands/chriscj/story.js command

--- a/config.json
+++ b/config.json
@@ -12,8 +12,8 @@
       "TETR.IO Commands"
     ],
     [
-      "games",
-      "Games Demo for Chriscj"
+      "chriscj",
+      "Chriscj"
     ]
   ],
   "ranks": {
